--- a/index.html
+++ b/index.html
@@ -12,15 +12,26 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href=""><button class="btn_primary">Hire Me</button></a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-heading">Marry Hardy</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus fugiat praesentium velit, in amet illo voluptatibus ad ullam consequatur natus voluptatem, harum expedita, veritatis officiis eveniet asperiores illum corrupti suscipit! Hic aliquid tempore blanditiis laborum culpa? Eos rem nemo iste?</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
 
     <main>
