about section created

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     </header>
 
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About ME</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat illum ducimus ullam consequatur deleniti, fugiat incidunt magnam quod minima suscipit eveniet totam facere! Impedit optio dolore officia omnis, deserunt quaerat ex non nobis nam? Nam sint obcaecati beatae nemo aut, dolorem enim quam earum nesciunt tempore. Suscipit eveniet atque voluptatibus labore placeat. Ex nobis ipsa, voluptatibus, cupiditate, reiciendis modi libero amet hic reprehenderit aperiam quis? Dignissimos quisquam corrupti expedita dolor officia, delectus et commodi eos deleniti eaque atque at sed cumque nostrum magni numquam velit voluptatum reprehenderit rerum maiores voluptatem voluptatibus voluptas eligendi? Eveniet cum ratione, sed placeat minus atque?</p>
+        </section>
     </main>
 
     <footer>
