Resume content added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-heading">Marry Hardy</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus fugiat praesentium velit, in amet illo voluptatibus ad ullam consequatur natus voluptatem, harum expedita, veritatis officiis eveniet asperiores illum corrupti suscipit! Hic aliquid tempore blanditiis laborum culpa? Eos rem nemo iste?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus fugiat praesentium velit, in amet
+                    illo voluptatibus ad ullam consequatur natus voluptatem, harum expedita, veritatis officiis eveniet
+                    asperiores illum corrupti suscipit! Hic aliquid tempore blanditiis laborum culpa? Eos rem nemo iste?
+                </p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
@@ -37,7 +40,14 @@
     <main>
         <section class="about">
             <h3 class="section-title">About ME</h3>
-            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat illum ducimus ullam consequatur deleniti, fugiat incidunt magnam quod minima suscipit eveniet totam facere! Impedit optio dolore officia omnis, deserunt quaerat ex non nobis nam? Nam sint obcaecati beatae nemo aut, dolorem enim quam earum nesciunt tempore. Suscipit eveniet atque voluptatibus labore placeat. Ex nobis ipsa, voluptatibus, cupiditate, reiciendis modi libero amet hic reprehenderit aperiam quis? Dignissimos quisquam corrupti expedita dolor officia, delectus et commodi eos deleniti eaque atque at sed cumque nostrum magni numquam velit voluptatum reprehenderit rerum maiores voluptatem voluptatibus voluptas eligendi? Eveniet cum ratione, sed placeat minus atque?
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat illum
+                ducimus ullam consequatur deleniti, fugiat incidunt magnam quod minima suscipit eveniet totam facere!
+                Impedit optio dolore officia omnis, deserunt quaerat ex non nobis nam? Nam sint obcaecati beatae nemo
+                aut, dolorem enim quam earum nesciunt tempore. Suscipit eveniet atque voluptatibus labore placeat. Ex
+                nobis ipsa, voluptatibus, cupiditate, reiciendis modi libero amet hic reprehenderit aperiam quis?
+                Dignissimos quisquam corrupti expedita dolor officia, delectus et commodi eos deleniti eaque atque at
+                sed cumque nostrum magni numquam velit voluptatum reprehenderit rerum maiores voluptatem voluptatibus
+                voluptas eligendi? Eveniet cum ratione, sed placeat minus atque?
 
             </p>
             <div class="about-info-container">
@@ -59,6 +69,98 @@
                     <p class="info-description">New York,Los Angeles</p>
                 </div>
             </div>
+        </section>
+
+        <!-- What i do section -->
+        <section>
+            <h3 class="section-title">What I DO </h3>
+            <p id="what-i-do-description" class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Quos ex culpa minus rem amet excepturi voluptatum labore incidunt? Saepe aperiam tempore iure
+                magni maxime, impedit qui maiores alias aspernatur nihil incidunt ratione dolore eius quod soluta, minus
+                beatae autem totam debitis quam culpa accusamus recusandae. Sequi repellendus ad porro consequatur.
+            </p>
+            <div class="skill-container">
+                <div class="skil">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node Js</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+                        sint.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla Javascript</h3>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, quasi.
+                    </p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita,
+                        unde.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">Mongo</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, et!
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h3>A Summary Of My Resume </h3>
+            <div class="resume-container">
+                <div class="resume-collum">
+                    <h3 class="resume-collum-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in computer science</h4>
+                        <h5 class="resuem-item-institute">from Hardvar university/2015-2017</h5>
+                        <p class="resume-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Iste, saepe.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in computer science</h4>
+                        <h5 class="resuem-item-institute">from Hardvar university/2015-2017</h5>
+                        <p class="resume-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Iste, saepe.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in computer science</h4>
+                        <h5 class="resuem-item-institute">from Hardvar university/2015-2017</h5>
+                        <p class="resume-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Iste, saepe.</p>
+                    </div>
+
+
+
+
+                </div>
+                <div class="resume-collum">
+                    <h3 class="resume-collum-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in computer science</h4>
+                        <h5 class="resuem-item-institute">from Hardvar university/2015-2017</h5>
+                        <p class="resume-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Iste, saepe.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in computer science</h4>
+                        <h5 class="resuem-item-institute">from Hardvar university/2015-2017</h5>
+                        <p class="resume-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Iste, saepe.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in computer science</h4>
+                        <h5 class="resuem-item-institute">from Hardvar university/2015-2017</h5>
+                        <p class="resume-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Iste, saepe.</p>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
 
